--- a/04_import_export.html
+++ b/04_import_export.html
@@ -370,6 +370,12 @@ div.tocify {
     <li>
       <a href="05_dataframe_manipulation.html">Prohlížení a manipulce s dataframem</a>
     </li>
+    <li>
+      <a href="06_variables_mutate_summarise.html">Manipulace a sumarizace proměnných</a>
+    </li>
+    <li>
+      <a href="07_factors.html">Práce s faktory</a>
+    </li>
   </ul>
 </li>
 <li>
@@ -404,14 +410,10 @@ div.tocify {
 <p>CSV soubory je možné importovat pomocí funkce <code>read.csv()</code>. Tato funkce vyžaduje alespoň jeden argument, <code>file</code>, což je cesta k datasetu. Výsledek rovnou uložíme do nového dataframu:</p>
 <pre class="r"><code>countries = read.csv(file = &quot;C:/Users/ales_/Desktop/own_projects/Uvod_do_analyzy_dat_v_R/data/countries.csv&quot;)</code></pre>
 <p>Cestu k souboru můžeme ve Windows podržením klávesy <strong>shift</strong> a <strong>kliknutím pravým tlačítkem myši</strong> na soubor v našem počítači. Potom zvolíme možnost <em>copy as path</em> a zkopírovanou adresu vložíme do R klasicky pomocí <strong>ctrl</strong> + <strong>c</strong>.</p>
-<p>Pokud používáme operační systém Windows, je třeba si dát pozor ještě na jednu věc. Zkopírovaná adresa souboru bude obsahovat <strong>backslash</strong> (<code>\</code>), R ale v adrese očekává <strong>forwardslash</strong> (<code>/</code>), případně dvojité <strong>backslash</strong> (<code>\\</code>). Pokud bychom zkusili ve funkci read.csv() použít adresu, tak jak je, dostaneme chybu:</p>
-<pre class="csv"><code>countries = read.csv(&quot;C:\Users\ales_\Desktop\own_projects\Uvod_do_analyzy_dat_v_R\data\countries.csv&quot;)</code></pre>
-<p>Lomítka musíme ručně nahradit:</p>
-<pre class="r"><code>countries = read.csv(&quot;C:/Users/ales_/Desktop/own_projects/Uvod_do_analyzy_dat_v_R/data/countries.csv&quot;)
-
-countries = read.csv(&quot;C:\\Users\\ales_\\Desktop\\own_projects\\Uvod_do_analyzy_dat_v_R\\data\\countries.csv&quot;)
-# obě varianty vedou ke stejnému výsledku</code></pre>
-<p>Ruční nahrazování lomítek je dost otravné, ale za chvíli si ukážeme, jak se mu vyhnout.</p>
+<p>V některých operačních systémech je třeba si dát pozor ještě na jednu věc. Zkopírovaná adresa souboru bude obsahovat <strong>backslash</strong> (<code>\</code>), R ale v adrese očekává <strong>forwardslash</strong> (<code>/</code>), případně dvojité <strong>backslash</strong> (<code>\\</code>). Pokud bychom zkusili ve funkci read.csv() použít adresu, tak jak je, dostaneme chybu:</p>
+<pre class="r"><code>countries = read.csv(&quot;C:\Users\ales_\Desktop\own_projects\Uvod_do_analyzy_dat_v_R\data\countries.csv&quot;)</code></pre>
+<p>Naštěstí pro to existuje relativně jednoduchá oprava. Před cestu k souboru napíšem <code>r</code> a cestu samotnou (uvnitř úvozovek!) dáme do kulatých závorek:</p>
+<pre class="r"><code>countries = read.csv(r&quot;(C:\Users\ales_\Desktop\own_projects\Uvod_do_analyzy_dat_v_R\data\countries.csv)&quot;)</code></pre>
 <div id="argumenty-read.csv---sep-dec-a-encoding" class="section level3">
 <h3>Argumenty read.csv() - sep, dec a encoding</h3>
 <p>Prestože funkce <code>read.csv()</code> vyžaduje pouze argument <code>file</code>, často je nutné využít i některé další.</p>
@@ -423,8 +425,8 @@ countries = read.csv(&quot;C:\\Users\\ales_\\Desktop\\own_projects\\Uvod_do_anal
 <h2>Import RDS (.rds) souborů</h2>
 <p><code>.rds</code> je specializovaný R formát, obdobně jako je <code>.sav</code> specializovaný formát SPSS a <code>.dta</code> specializovaný formát Stata. Na rozdíl od prostého <code>.csv</code> souboru, může .rds uchovávat další informace o datech, jako například pořadí odpovědí likertových položek nebo textové označení (labely) proměnných. <code>.rds</code> také nemusí sloužit pouze k uchovávání syrových dat, ale i dalších objektu, například spočítaných modelů!</p>
 <p>Import <code>.rds</code> dat je téměř identický s importem <code>.csv</code> souborů:</p>
-<pre class="importing"><code>countries = readRDS(file = &quot;C:/Users/ales_/Desktop/own_projects/Uvod_do_analyzy_dat_v_R/data/countries.rds&quot;)</code></pre>
-<p>Platí přitom stejná omezení, co se týče lomítek, tedy adresa k souboru musí obsahovat <em>forwardslash</em> (<code>/</code>), ne <em>backslash</em> (<code>\</code>). Není ovšem nutné řešit separátory sloupců a ani encoding.</p>
+<pre class="r"><code>countries = readRDS(file = r&quot;(C:\Users\ales_\Desktop\own_projects\Uvod_do_analyzy_dat_v_R\data\countries.rds)&quot;)</code></pre>
+<p>Platí přitom stejná omezení, co se týče lomítek, tedy je třeba přidat <code>r</code> před cestu k souboru a závorky okolo cesty samotné (unvitř úvozovek). Není ovšem nutné řešit separátory sloupců a ani encoding.</p>
 </div>
 <div id="import-dat-z-jiných-formátů" class="section level2">
 <h2>Import dat z jiných formátů</h2>
@@ -443,19 +445,19 @@ countries = read.csv(&quot;C:\\Users\\ales_\\Desktop\\own_projects\\Uvod_do_anal
 <div id="export-dat" class="section level1">
 <h1>Export dat</h1>
 <p>Export dat probíhá velmi podobně jako jejich import. Funkce pro export zpravidla začínájí slovem <code>write</code>, případně <code>save</code>. Pro uložení dat v .csv formátu slouží funkce <code>write.csv()</code>, která potřebuje dva argumenty. <code>x</code> je jméno objektu, který chceme exportovat a <code>file</code> je cesta, kam má být objekt uložen:</p>
-<pre class="r"><code>write.csv(x = countries, file = &quot;C:/Users/ales_/Desktop/own_projects/Uvod_do_analyzy_dat_v_R/data/countries_backup.csv&quot;)</code></pre>
+<pre class="r"><code>write.csv(x = countries, file = r&quot;(C:\Users\ales_\Desktop\own_projects\Uvod_do_analyzy_dat_v_R\data\countries_backup.csv)&quot;)</code></pre>
 <p>Na konci cesty je název souboru, do kterého budou data exportovány (v našem případě <code>countries.csv</code>). Nesmíme také zapomenout na koncovku souboru (<em>.csv</em>), jinak se soubor exportuje bez ní a bude nutné jí později přidávat manuálně. Můžeme také ručně nastavit seperátor sloupc pomocí argumenty sep (ve výchozím nastavení <code>,</code>) a oddělovač desetinných čísel (ve výchozím nastavení <code>.</code>). Encoding je možné nastavit pomocí argumentu <code>fileEncoding</code> (standardně <code>UTF-8</code>).</p>
 <p>Uložení do .rds probíhá pomocí funkce <code>saveRDS()</code>. Stejně jako v předchozím případě je nutné specifikovat, jaký objekt má být exportován (argument <code>object</code>) a cesta, kam má být soubor uložen (argument <code>file</code>):</p>
-<pre class="r"><code>write.csv(object = countries, file = &quot;C:/Users/ales_/Desktop/own_projects/Uvod_do_analyzy_dat_v_R/data/countries_backup.rds&quot;)</code></pre>
+<pre class="r"><code>saveRDS(object = countries, file = r&quot;(C:\Users\ales_\Desktop\own_projects\Uvod_do_analyzy_dat_v_R\data\countries_backup.rds)&quot;)</code></pre>
 </div>
 <div id="pracovní-adresář-working-directory" class="section level1">
 <h1>Pracovní adresář (<em>working directory</em>)</h1>
-<p>Přestože je možné při importu a exportu dat explicitně určit cestu k souboru v rámci dané funkce, opakované vypisování cesty (a opravování lomítek) je nepohodlné. Místu toho můžeme určitý adresář určit jako pracovní adresář (<code>working directory</code>). Pracovní adresář je místo, odkud bude R automaticky importovat a kam bude exportovat soubory, pokud neřekneme jinak.</p>
+<p>Přestože je možné při importu a exportu dat explicitně určit cestu k souboru v rámci dané funkce, opakované vypisování cesty je nepohodlné. Místu toho můžeme určitý adresář určit jako pracovní adresář (<code>working directory</code>). Pracovní adresář je místo, odkud bude R automaticky importovat a kam bude exportovat soubory, pokud neřekneme jinak.</p>
 <p>Adresu současného pracovního adresáře zjistíme pomocí funkce <code>getwd()</code>, zkratka pro <em>get working directory</em> :</p>
 <pre class="r"><code>getwd()</code></pre>
 <pre><code>## [1] &quot;C:/Users/ales_/Desktop/own_projects/Uvod_do_analyzy_dat_v_R&quot;</code></pre>
 <p>Pokud bychom chtěli nastavit nový pracovní adresář, použijeme funkci <code>setwd()</code> (<em>set working directory</em>):</p>
-<pre class="r"><code>setwd(&quot;C:/Users/ales_/Desktop/own_projects/Uvod_do_analyzy_dat_v_R/data)</code></pre>
+<pre class="r"><code>setwd(r&quot;(C:\Users\ales_\Desktop\own_projects\Uvod_do_analyzy_dat_v_R\data)&quot;)</code></pre>
 <p>Od této chvíle, pokud neřekneme jinak, bude všechny soubory hledat a ukládat do výše zmíněné složky. Například, pokud bychom chtěli importovat .csv soubor, který ve složce je v pracovním adresáři, stačí:</p>
 <pre class="r"><code>countries = read.csv(&quot;countries.csv&quot;)</code></pre>
 <p>Na rozdíl od předchozích případů už nemmusíme vypisovat celou adresu do funkce read.csv(). Pokud se v pracovním adresáři nachází soubor <code>countries.csv</code>, R si ho najde samo. obdobně můžeme použít i funkce <code>readRDS()</code> nebo <code>write.csv()</code>.</p>
@@ -509,7 +511,7 @@ countries = read.csv(&quot;C:\\Users\\ales_\\Desktop\\own_projects\\Uvod_do_anal
 </div>
 <div id="využívejte-balíčku-here" class="section level2">
 <h2>3) Využívejte balíčku here</h2>
-<p>Import a export dat může být překvapivě zdlouhavou záležitostí. Jednak je tu absurdně hloupý problém se špatnými lomítky ve Windows (<code>\</code> místo <code>/</code>), a druhek je nutn0 cesty k souborům měnit pokaždé, když složku s projektem přesuneme. Oba tyto problémy se ovšem dají vyřešit pomocí balíčku <code>here</code>, který cesty k souborům kontroluje za nás.</p>
+<p>Import a export dat může být překvapivě zdlouhavou záležitostí.Cesty k souborům měnit pokaždé, když složku s projektem přesuneme. Tento problém se ovšem dá vyřešit pomocí balíčku <code>here</code>, který cesty k souborům kontroluje za nás.</p>
 <p>Tyto typy by měly výrazně ulehčit práci s R a umožnit hladký průběh analýzy. Pro představu, složka projektu, ve kterém pracujeme by měla vypadat nějak takto:</p>
 <p><img src="images/project_folder.PNG" width="700px" /></p>
 </div>
